--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,4 @@
 [package]
-name = "hello_remote_world"
+authors = ["Tim McNamara <tim@mcnamara.nz>"]
+name = "hello_rust_learners"
 version = "0.1.0"
-authors = ["Walt Ritscher <waltritscher@linkedin.com>"]
-
-[lib]
-path ="./src/lib/lib.rs"
