--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,10 @@
 [package]
-name = "rust-code-challenge-1"
+name = "rust-code-challenge-10"
 version = "0.0.0"
 edition = "2018"
 
 [dependencies]
+
+[dependencies.time]
+version = "0.3"
+features = ["parsing"]
