--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,9 @@
 [package]
-name = "rust-code-challenge-1"
+name = "rust-code-challenge-12"
 version = "0.0.0"
 edition = "2018"
 
 [dependencies]
+
+[dev-dependencies]
+tempfile = "3"
